<resources>
    <string name="app_name">Kitchen Clean</string>

    <!-- Global -->
    <string name="global_dialog_action_ok">OK</string>
    <string name="global_dialog_action_yes">YES</string>
    <string name="global_dialog_action_proceed">PROCEED</string>
    <string name="global_dialog_action_no">NO</string>
    <string name="global_dialog_action_cancel">BACK</string>
    <string name="global_dialog_action_delete">DELETE</string>
    <string name="global_dialog_action_return">RETURN</string>
    <string name="global_dialog_action_retry">RETRY</string>

    <string name="global_dialog_title_error">Error</string>
    <string name="global_dialog_title_success">Success</string>

    <string name="global_dialog_message_please_wait">Please wait...</string>

    <string name="global_toast_cancelled">Cancelled</string>

    <string name="global_action_logout">Logout</string>
    <!-- End Global -->

    <!-- Login -->
    <string name="activity_login_title">Login</string>
    <string name="login_label_email">Email</string>
    <string name="login_label_password">Password</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">@string/register_button_register</string>
    <string name="login_progress">@string/global_dialog_message_please_wait</string>
    <!-- End Login -->

    <!-- Register -->
    <string name="activity_register_title">Register</string>
    <string name="register_label_email">Email</string>
    <string name="register_label_first_name">First Name</string>
    <string name="register_label_last_name">Last Name</string>
    <string name="register_label_account_no">Account Number</string>
    <string name="register_label_contact_no">Contact Number</string>
    <string name="register_label_password">Password</string>
    <string name="register_label_confirm_password">Confirm Password</string>
    <string name="register_label_no_account">Don\'t have an account yet?</string>
    <string name="register_button_register">Register</string>
    <string name="register_progress">@string/global_dialog_message_please_wait</string>
    <!-- End Login -->

    <!-- Verify Mobile Number -->
    <string name="activity_verify_mobile_number_title">Verification</string>
    <string name="verify_mobile_number_label_enter">Enter Verification Code</string>
    <string name="verify_mobile_number_label_did_not_get_code">Did not get the verification code?</string>
    <string name="verify_mobile_number_button_submit">Next</string>
    <string name="verify_mobile_number_button_resend_code">Resend Verification Code</string>
    <string name="verify_mobile_number_progress">@string/global_dialog_message_please_wait</string>
    <!-- End Verify Mobile Number -->

    <!-- Ask Mobile Number -->
    <string name="activity_ask_mobile_number_title">Mobile Number</string>
    <string name="ask_mobile_number_label_reason">We need your mobile number to link it to your account. So you would be able to send and receive funds.</string>
    <string name="ask_mobile_number_hint_mobile_number">Mobile Number</string>
    <string name="ask_mobile_number_button_proceed">Next</string>
    <!-- End Ask Mobile Number -->

    <!-- Home -->
    <string name="activity_title_home">Home</string>
    <!-- End Home -->

    <!-- Account List -->
    <string name="fragment_account_list_title">Accounts</string>
    <string name="account_list_label_no_account">No Accounts to display</string>
    <!-- End Account List -->

    <!-- Transaction List -->
    <string name="fragment_transaction_list_title">History</string>
    <string name="activity_transaction_list_title">@string/fragment_transaction_list_title</string>
    <string name="transaction_list_label_no_transaction">No Transactions to display</string>
    <!-- End Transaction List -->

    <!-- Profile -->
    <string name="activity_title_profile">My Profile</string>
    <!-- End Profile -->

    <!-- Transaction Details -->
    <string name="activity_transaction_details_title">Transaction Details</string>
    <!-- End Transaction Details -->

    <!-- Select Contact -->
    <string name="activity_select_contact_title">Select Contact</string>
    <string name="select_contact_get_account_list_progress">@string/global_dialog_message_please_wait</string>
    <!-- End Select Contact -->

    <!-- Amount -->
    <string name="activity_amount_remarks_title">Money Transfer</string>
    <!-- End Amount -->

    <!-- Transfer -->
    <string name="activity_transfer_title">Confirm Transfer</string>
    <!-- End Transfer -->

    <!-- Add Account -->
    <string name="activity_title_add_account">Add\nAccount</string>
    <string name="add_account_label_title">Title</string>
    <string name="add_account_label_description">Description</string>
    <string name="add_account_label_account_no">Account Number</string>
    <string name="add_account_label_account_type">Account Type</string>
    <string name="add_account_button_add">Add</string>
    <!-- End Add Account -->

    <!-- Redeem Coupon -->
    <string name="activity_redeem_coupon_title">Redeem</string>
    <string name="redeem_coupon_label_source_mobile">Source Mobile Number</string>
    <string name="redeem_coupon_label_recipient_mobile">Recipient Mobile Number</string>
    <string name="redeem_coupon_label_coupon_code">Coupon Code</string>
    <string name="redeem_coupon_button_redeem">Redeem</string>
    <!-- End Redeem Coupon -->

</resources>
