<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">

            <TextView
                style="@style/TextView.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_account_label_title"/>

            <EditText
                android:id="@+id/titleEditText"
                style="@style/EditText.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"/>

            <TextView
                style="@style/TextView.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:inputType="number"
                android:text="@string/add_account_label_account_no"/>

            <EditText
                android:id="@+id/accountNoEditText"
                style="@style/EditText.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"/>

            <TextView
                style="@style/TextView.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/add_account_label_account_type"/>

            <EditText
                android:id="@+id/accountTypeEditText"
                style="@style/EditText.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"/>

            <TextView
                style="@style/TextView.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/add_account_label_description"/>

            <EditText
                android:id="@+id/descriptionEditText"
                style="@style/EditText.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="4"
                android:minLines="4"/>

            <Button
                android:id="@+id/addAccountButton"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/add_account_button_add"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>