<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">

            <TextView
                style="@style/TextView.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redeem_coupon_label_source_mobile"/>

            <EditText
                android:id="@+id/sourceMobileNoEditText"
                style="@style/EditText.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:inputType="phone"/>

            <TextView
                style="@style/TextView.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/redeem_coupon_label_recipient_mobile"/>

            <EditText
                android:id="@+id/recipientMobileNoEditText"
                style="@style/EditText.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:inputType="phone"/>

            <TextView
                style="@style/TextView.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/redeem_coupon_label_coupon_code"/>

            <EditText
                android:id="@+id/couponCodeEditText"
                style="@style/EditText.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"/>

            <Button
                android:id="@+id/redeemAccountButton"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/redeem_coupon_button_redeem"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>