<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">

            <TextView
                style="@style/TextView.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label_username"/>

            <EditText
                android:id="@+id/usernameEditText"
                style="@style/EditText.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"/>

            <TextView
                style="@style/TextView.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/login_label_password"/>

            <EditText
                android:id="@+id/passwordEditText"
                style="@style/EditText.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/loginButton"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/login_button_login"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:gravity="center"
                android:text="@string/register_label_no_account"/>

            <Button
                android:id="@+id/registerButton"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/login_button_register"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>