<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/spacing_medium"
                android:scaleType="centerInside"
                android:src="@drawable/ic_mobile"/>

            <TextView
                style="@style/TextView.H2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:padding="@dimen/spacing_medium"
                android:text="@string/ask_mobile_number_label_reason"/>

            <EditText
                android:id="@+id/mobileNumber"
                style="@style/EditText.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ask_mobile_number_hint_mobile_number"
                android:inputType="phone"/>

            <Button
                android:id="@+id/proceedButton"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/ask_mobile_number_button_proceed"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>