<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">

            <TextView
                style="@style/TextView.H1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:gravity="center"
                android:text="Enter Verification Code"/>

            <EditText
                android:id="@+id/verificationCodeEditText"
                style="@style/EditText.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="@integer/mobile_number_verification_code_length"
                android:textSize="@dimen/text_size_xlarge"
                tools:text="1234"/>

            <Button
                android:id="@+id/submitButton"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/verify_mobile_number_button_submit"/>

            <TextView
                style="@style/TextView.H2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:gravity="center"
                android:text="@string/verify_mobile_number_label_did_not_get_code"/>

            <Button
                android:id="@+id/resendVerificationCodeButton"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/verify_mobile_number_button_resend_code"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>